--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
 
     </head>
     <body>
-        <h1>This is github page</h1>
-        <p>my first github page</p>
-        <p>second line</p>
+        <h1> </h1>
+        <table border="0" width="800" height="600" align="center" bgcolor="#2a2c2b" cellpadding="10">
+            <tr>
+                <th colspan="2">
+                    <font size="5" color="#ff8a00">MY PORTFOLIO</font>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <font size="5" color="#ff8a00" > Hi I'm Joel</font> <br>
+                    <font size="4" color="white" > I enjoy taking complex problems and turning them into simple once. I also love the logic and structure of coding and always strive to write elegant and efficient code.</font>
+                    
+                    <font size="3" color="#ff8a00">
+                        <p><b><u>EDUCATION</u></b></p></font>
+                        <font size="3" color="white"><p>Bachelor of Engineering in Electronics & Telecommunication</p>
+                    </font>
+
+                    <font size="3" color="#ff8a00">
+                        <p><b><u>MAJOR PROJECT</u></b></p></font>
+                        <font size="3" color="white"><p>Innovative Medium Of Learning Using AR (Won 1st place for 
+                            TECHNIX 2021 National Level Project Competition)
+                            -We have built an AR learning android application (EDUCARE) 
+                            using unity 3d software for engineering students which will help in 
+                            better visualization of complex electronic circuits. It is a mobile 
+                            application which uses the device camera to capture the circuit and 
+                            then provides an augmented waveform simulation over that circuit. 
+                            It also have additional features to calculate different factors of that 
+                            circuit like Vdc, Idc, Irms etc. User is also able to listen to audio 
+                            explanation of the scanned circuit.
+                            </p>
+                    </font>
+
+                    <font size="3" color="#ff8a00">
+                        <p><b><u>SKILLS</u></b></p></font>
+                        <font size="3" color="white"><p>C, C++, Java, MYSQL, basics of RDBMS, HTML & CSS</p>
+                    </font>
+                </td>
+                <td><img src="picture.jpg" width="350" height="500"></td>
+            </tr>
+        </table>
     </body>
 </html>
