--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             application which uses the device camera to capture the circuit and 
                             then provides an augmented waveform simulation over that circuit. 
                             It also have additional features to calculate different factors of that 
-                            circuit like Vdc, Idc, Irms etc. User is also able to listen to audio 
+                            circuit like VDC, IDC, IRMS etc. User is also able to listen to audio 
                             explanation of the scanned circuit.
                             </p>
                     </font>
