--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                     <font size="3" color="#ff8a00">
                         <p><b><u>SKILLS</u></b></p></font>
                         <font size="3" color="white"><p>C, C++, Java, MYSQL, basics of RDBMS, HTML & CSS</p>
+                            
                     </font>
                 </td>
                 <td><img src="picture.jpg" width="350" height="500"></td>
             </tr>
         </table>
+      <a href="tutorials.html"><p style="text-align:center">Tutorials</p></a>
     </body>
 </html>
