--- a/tutorials.html
+++ b/tutorials.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Joel Nicolas Fernandes | Tutorials</title>
     </head>
         <body>
             <h1>
