--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <font size="3" color="#ff8a00">
                         <p><b><u>SKILLS</u></b></p></font>
-                        <font size="3" color="white"><p>C, C++, Java, MYSQL, basics of RDBMS, HTML & CSS</p>
+                        <font size="3" color="white"><p>C, C++, Java, MYSQL, basics of RDBMS, AR, HTML & CSS</p>
                             
                     </font>
                 </td>
