--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Joel Nicolas Fernandes | Home</title>
+        <title>Joel Nicolas Fernandes</title>
     </head>
     <body>
         <h1> </h1>
