--- a/tutorials.html
+++ b/tutorials.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Joel Nicolas Fernandes | Tutorials</title>
+        <title>Tutorials</title>
     </head>
         <body>
             <h1>
                 links for HTML & CSS tutorials
             </h1>
             <ul>
-                <li><a href="https://www.w3schools.com/html/"><p>w3schools</p></a></li>
-                <li><a href="https://www.tutorialspoint.com/html/html_basic_tags.htm"><p>tutorialspoint</p></a></li>
-                <li><a href="https://www.internetingishard.com/html-and-css/"><p >intrnetingishard</p></a></li>
+                <li><a href="https://www.w3schools.com/html/"><p>https://www.w3schools.com/html/</p></a></li>
+                <li><a href="https://www.tutorialspoint.com/html/html_basic_tags.htm"><p>https://www.tutorialspoint.com/html/html_basic_tags.htm</p></a></li>
+                <li><a href="https://www.internetingishard.com/html-and-css/"><p >https://www.internetingishard.com/html-and-css/</p></a></li>
             </ul>
             <a href="index.html">Home</a>
     
