--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
     </head>
         <body>
             <h1>
-                links for HTML & CSS tutorials
+                links for HTML tutorials
             </h1>
             <ul>
                 <li><a href="https://www.w3schools.com/html/"><p>https://www.w3schools.com/html/</p></a></li>
