--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1> </h1>
-        <table border="0" width="800" height="600" align="center" bgcolor="#2a2c2b" cellpadding="10">
+        <table border="0" width="800" height="600" align="center" style="background-color:#2a2c2b;" cellpadding="10">
             <tr>
                 <th colspan="2">
                     <font size="5" color="#ff8a00">MY PORTFOLIO</font>
